# nexgenspec-website

./: .gitignore  .htaccess  NICKOS_RESUME_BRIEFING.md  README.txt  content.json  index.html  privacy.html  robots.txt  sitemap.xml  terms.html  vs-spectora.html
.claude/: launch.json  settings.json  settings.local.json
bsdub-logo/: index.html  render.html
dia-research/: CLAUDE_DESIGN_PROMPT.md  DESIGN_BRIEF.md  dia_about.html  dia_appointments.html  dia_brief.md  dia_contact.html  dia_home.html  dia_services.html  extracted.json  (+2 more)
northbound-seo/backend/: .env.example  Dockerfile  pyproject.toml
northbound-seo/backend/alembic/: env.py
northbound-seo/backend/app/: config.py  deps.py  main.py
northbound-seo/backend/app/actions/: models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/ai/: client.py  prompts.py  schemas.py
northbound-seo/backend/app/audits/: analyzer.py  crawler.py  models.py  router.py  schemas.py  scorer.py  service.py
northbound-seo/backend/app/auth/: models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/common/: database.py  exceptions.py  middleware.py  pagination.py
northbound-seo/backend/app/competitors/: models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/content/: models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/keywords/: dataforseo.py  models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/projects/: models.py  router.py  schemas.py  service.py
northbound-seo/backend/app/tenants/: models.py  router.py  schemas.py  service.py
(+71 files in other folders)
